@@ -35,6 +35,8 @@ v.0.5dev (ongoing development)
  * avoid sending duplicate "success" messages in response to menu_add_item
  + lcdexec: parameter support using widgets
  * server core: display values in menu for all input MenuEntry types
+ * hd44780 driver: reorganize ConnectionType recognition
+ + hd44780 driver: new ConnectionType mplay
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
